--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Testing Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Tesing Page</h1>
+      <h1>Tesing Page</h1>
     </header>
 
     <div class="container svg-container">
-        <svg></svg>
+      <svg></svg>
     </div>
 
-    <script type="text/javascript" src="/node_modules/d3/dist/d3.min.js"></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/d3/dist/d3.min.js"
+    ></script>
     <script type="module" src="js/d3svg.js"></script>
-</body>
+  </body>
 </html>
