--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Tesing Page</h1>
+      <h1>TesTing Page</h1>
     </header>
 
     <div class="container svg-container">
